# sonicmind-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  nightly-llm-eval.yml
app/: __init__.py  agent.py  answer.py  compound.py  concurrency.py  config.py  evals.py  genres.py  intents.py  knowledge.py  library.py  library_baseline.py  memory.py  models.py  netease_auth.py  rate_limit.py  react_loop.py  similarity.py  storage.py
app/adapters/: __init__.py  base.py  feishu_adapter.py  protocol.py  wechat_adapter.py
app/api/: auth_routes.py  bot_routes.py  main.py  web_routes.py
app/context/: __init__.py  gssc.py
app/graph/: __init__.py  _shared.py  budget.py  builder.py  continuation.py  decompose.py  execution.py  finalize.py  nodes.py  planning.py  recovery.py  routing.py  state.py  tag_rules.py
app/llm/: __init__.py  client.py  mock.py  observability.py  protocol.py  routing.py  structured.py  tools.py
app/media/: __init__.py  analyzer.py  pipeline.py
app/profile/: __init__.py  builder.py  evidence.py  insights.py  models.py
app/prompts/: __init__.py  agent_system.py  candidate_generator.py  compound.py  decompose.py  identify.py  intent.py  memory.py  playlist.py  query_plan.py  recommend.py  reflect.py  search.py  untrusted_boundary.py
app/recommend/: __init__.py  collaborative.py  daily.py  engine.py  features.py  hygiene.py  rerank.py  scene_vibe.py  source_balance.py
app/retrieval/: __init__.py  embeddings.py  vector_store.py
app/rules/: __init__.py  discover.py  recommend.py  taste_experiment.py  track.py
app/search/: __init__.py  lastfm_discovery.py  netease_playlist.py  verifier.py  web_music_discovery.py
app/security/: __init__.py  ingest_guard.py  secret_box.py
app/services/: __init__.py  album.py  (+22 more)
docs/: ADR_AGENT_RUNTIME_V2.md  AGENT_WORKFLOW.md  ARCHITECTURE_REPORT.md  BOT_DEPLOYMENT.md  EXPLAINER.md  FRONTEND.md  MULTI_INTENT_MANUAL_TEST.md  PHASE4_UPGRADE_PLAN.md  PLAN_MOOD_RELEVANCE.md  PLAN_P1_EVAL.md  REMEDIATION_PLAN.md  ROADMAP_ALIGNMENT.md  SONICMIND_专家分析报告.md  SONICMIND_优化方案.md  SOULTUNER_RESEARCH.md  UPGRADE_PLAN.md  WEB_MANUAL_TEST_SUITE.md  recommendation-revolution-design.md
evals/: deep_memory_stress_dialogue.json  golden_dialogues.json  music_knowledge_cases.json  realistic_memory_dialogue.json  stress_memory_dialogue.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: demo_flow.py  large_messy_library.py  library_baseline.py  live_heavy_user_recommendation_eval.py  long_dialogue_smoke.py  realistic_memory_eval.py  run_agent_evals.py
tests/: conftest.py  offline_fakes.py  test_ab_rerank.py  test_adapters.py  test_agent_evals.py  test_agent_flow.py  test_agent_retention.py  test_agent_stability.py  test_answer_guard.py  test_api.py  test_api_auth.py  test_async_music_source.py  test_auth_routes.py  test_behavior_scoring.py  test_candidate_hygiene.py  test_candidate_quality.py  test_checkpoint_security.py  test_collaborative.py  test_compound_task.py  test_concurrency.py  test_config.py  test_cover_recognizer.py  test_daily_recommend.py  test_dialogue_state.py  test_discogs_client.py  test_embeddings.py  test_empty_result_recovery.py  test_eval_cases.py  test_feature_estimates.py  test_genre_vocab.py  test_graph_context_propagation.py  test_graph_interrupt_resume.py  test_graph_resource_library.py  test_gssc.py  test_history_persistence.py  test_import_classification.py  test_ingest_guard.py  test_intents.py  test_interview_tools.py  test_language_weighting.py  (+59 more)
(+57 files in other folders)
