[project]
name = "av-recommend-agent"
version = "0.3.0"
description = "智能影音推荐助手 - 个性化音乐推荐、每日歌单、LLM 语义搜索"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "qrcode>=7.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "aiosqlite>=0.20.0",
  "cryptography>=42.0.0",
  "rapidfuzz>=3.0",
  # FastAPI UploadFile（专辑封面上传识别）依赖 python-multipart 解析 multipart/form-data。
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
media = [
  "yt-dlp>=2024.8.6",
]
# 专辑封面视觉识别：视觉模型走 API（DashScope/OpenAI/Gemini/Ollama，零额外依赖），
# 这里只装「无视觉 key 时的本地 OCR 兜底」与「封面缩图」。装：pip install -e ".[vision]"
vision = [
  "rapidocr-onnxruntime>=1.3.8",  # 本地 OCR 兜底（未装则自动降级到提示用户输入）
  "pillow>=10.0.0",               # 封面缩图（视觉端送图前降分辨率省 token）
]
embeddings = [
  "sentence-transformers>=2.2.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["egg-info", "data", "artifacts", "frontend"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
  "E501",   # line too long —— 由格式化器管，不阻塞
  "E741",   # 模糊变量名（存量代码可能用 l/i 等单字母）
  "B008",   # 默认参数里调用函数（FastAPI Depends 惯用法）
  "B904",   # raise ... from —— 存量代码大量裸 raise，逐步改
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # 测试里 import 常在 sys.path 调整之后
"app/api/main.py" = ["E402"]  # router 必须在 app/agent 实例化之后导入（规避循环 import）
